--- a/app/assets/stylesheets/quizzes/top.scss
+++ b/app/assets/stylesheets/quizzes/top.scss
@@ -1,3 +1,102 @@
-h4 {
-  color: red;
+body , html {
+    height: 100%;
+}
+#header {
+    height: 180px;
+}
+#container {
+    width: 100%;
+    position: relative;
+    height: auto !important;
+    height: 100%;
+    min-height: 100%;
+}
+
+#contents {
+    padding-bottom: 100px;
+    background-image: image-url("back.jpg");
+}
+hr {
+  height: 1px;
+  border: none;
+  border-top: 5px #038F8F solid;
+}
+.logo {
+  margin-left: 40px;
+  height:15%;
+  width: 15%;
+}
+#title-box {
+  text-align: center;
+}
+.title {
+  margin-top: 20px;
+}
+input {
+  background: #038F8F;
+  margin-top: 30px;
+  width:200px;
+  font-size:24px;
+  font-weight:bold;
+  text-decoration:none;
+  text-align:center;
+  padding:8px 0 10px;
+  color: white;
+  border:1px solid white;
+}
+
+#footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 220px;
+}
+
+
+.himg {
+  height: 150px;
+  width: 150px;
+}
+
+/* ------------------------------
+   loopSlider
+------------------------------ */
+.loopSliderWrap { // 全体
+    top: 0;
+    left: 0;
+    height: 200px;
+    overflow: hidden;
+    position: absolute;
+}
+
+.loopSlider {
+    margin: 0 auto;
+    width: 100%; //全体幅
+    height: 300px;
+    text-align: left;
+    position: relative;
+    overflow: hidden;
+}
+
+.loopSlider ul {
+    height: 300px;
+    float: left;
+    overflow: hidden;
+}
+
+.loopSlider ul li {
+    width: 180px;
+    height: 180px;
+    float: left;
+    display: inline;
+    overflow: hidden;
+}
+
+/* ------------------------------
+   CLEARFIX ELEMENTS
+------------------------------ */
+.loopSliderWrap:after {
+    content: "";
+    display: none;
+    clear: none;
 }
